feat(javascript): get product by ean
